@@ -11,57 +11,42 @@ import time
 class Atari:
     @staticmethod
     def make_env(render=False, obs_type="classic", is_head=False):
-        env_path = f"{P.env_dir}{P.env_name}.pkl"
-        if is_head:
-            if P.sticky_action:
-                repeat_action_probability = 0.25
-                ver = "v0"
-            else:  # Deterministic
-                repeat_action_probability = 0.0
-                ver = "v4"
-            if obs_type in ["classic", "historical_action"]:
-                # env = gym.make(
-                #     f"{P.env_name}Deterministic-{ver}", 
-                #     frameskip=1,
-                #     full_action_space=True,
-                # )
-                env = gym.make(
-                    f"{P.env_name}NoFrameskip-{ver}", 
-                    frameskip=1,
-                    repeat_action_probability=repeat_action_probability,
-                    full_action_space=True,
-                    # render_mode='human',
-                )
-            if obs_type == "ram":
-                env = gym.make(
-                    f"{P.env_name}-ramNoframeskip-{ver}", 
-                    frameskip=1,
-                    repeat_action_probability=repeat_action_probability,
-                    full_action_space=True,
-                )
-
-            env.seed(2022)
-
-            env = TimeLimit(env.env, max_episode_steps=P.max_episode_steps)
-
-            if render:
-                env = RecordVideo(env, f"{P.video_dir}{P.env_name}/", episode_trigger=lambda episode_id: episode_id % P.render_every == 0)  # output every episode
-
-            env = AtariPreprocessing(
-                env,
-                obs_type=obs_type,
-                frame_skip=P.num_action_repeats,
-                max_random_noops=P.max_random_noops,
+        if P.sticky_action:
+            repeat_action_probability = 0.25
+            ver = "v0"
+        else:  # Deterministic
+            repeat_action_probability = 0.0
+            ver = "v4"
+        if obs_type in ["classic", "historical_action"]:\
+            env = gym.make(
+                f"{P.env_name}NoFrameskip-{ver}", 
+                frameskip=1,
+                repeat_action_probability=repeat_action_probability,
+                full_action_space=True,
+                # render_mode='human',
             )
-            IO.write_disk_dump(env_path, env)
-        else:
-            while True:
-                try:
-                    env = IO.read_disk_dump(env_path)
-                    break
-                except Exception:
-                    time.sleep(0.1)
+        if obs_type == "ram":
+            env = gym.make(
+                f"{P.env_name}-ramNoframeskip-{ver}", 
+                frameskip=1,
+                repeat_action_probability=repeat_action_probability,
+                full_action_space=True,
+            )
 
+        env.seed(2022)
+        if is_head:
+            env = TimeLimit(env.env, max_episode_steps=P.max_eval_episode_steps)
+        else:
+            env = TimeLimit(env.env, max_episode_steps=P.max_train_episode_steps)
+
+        if render:
+            env = RecordVideo(env, f"{P.video_dir}{P.env_name}/", episode_trigger=lambda episode_id: episode_id % P.render_every == 0)  # output every episode
+
+        env = AtariPreprocessing(
+            env,
+            obs_type=obs_type,
+            frame_skip=P.num_action_repeats,
+        )
         return env
 
 
@@ -177,7 +162,7 @@ class AtariPreprocessing(object):
           observation: numpy array, the initial observation emitted by the
             environment.
         """
-        self.environment.reset()
+        obs = self.environment.reset()
         obs = self.apply_random_noops()
 
         self.lives = self.environment.ale.lives()
