@@ -1,3 +1,5 @@
+221215 add random ops
+221215 different train eval steps
 221208 value iteration gamma fixed
 221124 atari unreliability fixed
 221123 optimize atari
